Configure-logging-efk/cluster-logging-efk/config/5-kibana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: kibana
    namespace: logging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      name: kibana
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:7.2.0
        resources:
          limits:
            cpu: 2
            memory: 1.5Gi
          requests:
            cpu: 1
            memory: 1Gi
        ports:
        - name: http
          containerPort: 5601
          protocol: TCP
