Configure-logging-efk/cluster-logging-efk/config/7-test-log.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-log
spec:
  containers:
  - name: test-log
    image: busybox
    args: [/bin/sh, -c,
            'i=0; while true; do echo "$i: $(date)"; i=$((i+1)); sleep 1; done']
