Configure-logging-efk/cluster-logging-efk/config/4-kibana-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: logging
  labels:
    app: kibana
spec:
  ports:
  - port: 80
    targetPort: 5601
    protocol: TCP
    name: http
  selector:
    app: kibana
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: logging
  name: kibana
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: kibana.22j.exchangeweb.net
    http: 
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601
